<resources>
    <string name="app_name">InvaZionPrototype</string>
    <string name="identifiant">Identifiant</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="me_connecter">Me connecter</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="entrez_votre_mail_ici">Entrez votre mail ici</string>
    <string name="entrez_votre_mot_de_passe_ici_opt">Entrez votre mot de passe ici (Opt.)</string>
    <string name="panth_on">PANTHÉON</string>
    <string name="citoyens">CITOYENS</string>
    <string name="carte">CARTE</string>
    <string name="name_sample">Pseudo : Name Sample</string>
    <string name="id_sample">ID : 1</string>
    <string name="location_sample">Location : 1, 0</string>
    <string name="back">Retour</string>
    <string name="list_all_citizens">List all the citizens</string>
    <string name="search_one_citizen">Search for one citizen</string>
    <string name="id">ID : 56</string>
    <string name="name_citizen">Nom : Boblefou</string>
    <string name="current_map_citizen">Carte : n°1</string>
    <string name="citizen_intown">En ville ?</string>
    <string name="citizen_place">Localisation : [0,5]</string>
    <string name="citizen_last_death">Dernière mort : 15–01–2020</string>
    <string name="input_search_id">Entrez un id utilisateur ici</string>
    <string name="validate">Valider</string>
    <string name="username_problem_txt">Problem with username</string>
    <string name="last_death_problem_txt">Problem with last death</string>
    <string name="city_problem_txt">Problem with city ID</string>
    <string name="map_problem_txt">Problem with map ID</string>
    <string name="citizenID_problem_txt">Problem with citizen ID</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="citizen_selection">ID : %1$s</string>
    <string name="citizen_mapid">Carte n° %1$s</string>
    <string name="citizen_intown_ornot">En ville ? %1$s</string>
    <string name="citizen_last_death_date">Dernière mort : %1$s</string>
    <string name="citizen_location">Position : [%d,%d]</string>
    <string name="not_in_town">En ville ? Non</string>
    <string name="is_in_town">En ville ? Oui</string>
    <string name="pantheon_name_item">Boblefou</string>
    <string name="survival_time_pantheon_item">Survie max : 35J</string>
</resources>
