<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/citizens_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CitizensActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/citizens_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="25dp"
        android:visibility="visible"
        android:orientation="vertical">

        <Button
            android:id="@+id/list_citizens_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_all_citizens" />

        <Button
            android:id="@+id/search_one_citizen_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_one_citizen" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_found_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:layout_marginBottom="70dp"
            android:src="@drawable/ic_basic_face"/>

        <TextView
            android:id="@+id/citizen_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_tablet"
            android:drawableEnd="@drawable/ic_tablet"
            android:text="@string/name_citizen"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="35dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/citizen_found_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/citizen_map_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_map_citizen"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/citizen_intown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/citizen_intown"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/citizen_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/citizen_place"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/citizen_last_death"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/citizen_last_death"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/search_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/back"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_search_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_search_input_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/input_search_id"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <Button
            android:id="@+id/search_input_validate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/validate"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <Button
            android:id="@+id/search_input_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:text="@string/back"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp" />
    </LinearLayout>

    <Button
        android:id="@+id/exit_citizens_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/bg_btn_theme"
        android:padding="10dp"
        android:text="@string/back"
        android:textColor="#DB1D1D"
        android:textSize="20sp" />

</RelativeLayout>