<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/zombie_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nom_app_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textSize="40sp"
        android:textColor="#FFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/me_connecter"
        android:layout_centerInParent="true"
        android:textColorHint="#FFF"
        android:textSize="37sp"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:paddingBottom="40sp"/>

    <Button
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cr_er_un_compte"
        android:layout_below="@id/connection"
        android:layout_centerHorizontal="true"
        android:textColorHint="#FFF"
        android:textSize="35sp"
        android:textStyle="bold"
        android:background="@android:color/transparent"/>

</RelativeLayout>