<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/nom_app_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="#000"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_app"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_below="@id/nom_app_menu"
        android:layout_centerHorizontal="true"
        android:src="@drawable/blood_drop" />

    <Button
        android:id="@+id/btnCarte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/standard_btn"
        android:ems="10"
        android:text="@string/carte"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawableRight="@drawable/ic_map_black_24dp"
        android:paddingRight="20dp"/>

    <Button
        android:id="@+id/btnCitoyens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCarte"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/standard_btn"
        android:ems="10"
        android:text="@string/citoyens"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawableRight="@drawable/ic_people_black_24dp"
        android:paddingRight="20dp"/>

    <Button
        android:id="@+id/btnPanthéon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCitoyens"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/standard_btn"
        android:ems="10"
        android:text="@string/panth_on"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawableRight="@drawable/ic_insert_chart_black_24dp"
        android:paddingRight="20dp"/>
</RelativeLayout>